--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^8.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-svg": "^12.1.1",
     "react-router-bootstrap": "^0.23.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
